fix bug - temporarily disable animation for the slide - fixed some layout issues

--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,7 +1,7 @@
 .footer {
     margin-top: 10px;
-    opacity: 0;
-    transform: translateX(-10%);
+    // opacity: 0;
+    // transform: translateX(-10%);
 
     .content__navigation {
         display: flex;
@@ -15,6 +15,7 @@
             justify-content: flex-end;
             align-items: center;
             width: 16%;
+            // z-index: 1002;
         }
 
         #btn-prev {
@@ -31,12 +32,14 @@
             padding: 10px;
             max-width: 50px;
             border-radius: 50%;
+            // z-index: 1002;
     
             .arrow-hover {
                 cursor: pointer;
                 position: relative;
                 width: 16px;
                 height: 24px;
+                // z-index: 1002;
             }
             
             .arrow-hover div::after {
@@ -48,6 +51,7 @@
                 border-radius: 5px;
                 transform: rotate(45deg);
                 top: calc(50% - 7px);
+                // z-index: 1002;
             }
             .arrow-hover div::before {
                 content: '';
@@ -58,6 +62,7 @@
                 border-radius: 5px;
                 transform: rotate(-45deg);
                 top: calc(50% + 4px);
+                // z-index: 1002;
             }
         }
     }
@@ -81,11 +86,12 @@
 
         .sliders__content {
             overflow: hidden;
+            z-index: 1002;
         }
     
         .sliders__imeges {
             display: flex;
-            transition: 2s;
+            transition: .5s;
         }
     
         .slide {
